Ensure quick add button aligns with swatches

--- a/assets/swatches-cheyenne.css
+++ b/assets/swatches-cheyenne.css
@@ -1,8 +1,8 @@
 .price-and-swatch {
-  position:relative;
+  position: relative;
   margin-left: 10px;
   display: flex;
-  flex-direction: column; /* Default for mobile */
+  flex-direction: column;
   align-items: flex-start;
   gap: 5px;
 }
@@ -12,14 +12,22 @@
   flex-wrap: nowrap;
   align-items: center;
   width: 100%;
-  margin-bottom: 5px; /* Ensure space between swatches and price */
+  margin-bottom: 5px;
   margin-left: 1px;
   margin-top: -4px;
 }
 
+.product-card-plus {
+  position: relative !important;
+  margin-left: auto;
+  right: auto !important;
+  bottom: auto !important;
+  z-index: 1;
+}
+
 @media (min-width: 768px) {
   .price-and-swatch {
-    flex-direction: column; /* Desktop layout: swatches and price side-by-side */
+    flex-direction: column;
     align-items: flex-start;
   }
 
@@ -61,9 +69,7 @@
   outline: none;
 }
 
-/*SLIDER *\
-
-/* Ensure the swiper container fills its parent */
+/* SLIDER */
 .swiper-container {
   width: 100%;
   height: 100%;
@@ -71,7 +77,6 @@
 
 /* Style the swiper slides */
 .swiper-slide {
-
   justify-content: center;
   align-items: center;
 }
@@ -84,37 +89,36 @@
 }
 
 #product-grid > li > div > div > div.card__content > div > div > div > div.product-card__swatch-indicator > span {
-  width:23px!important;
-  height: 23px!important;
-  margin-right: 5px!important;
-  border-radius: 20px;  
+  width: 23px !important;
+  height: 23px !important;
+  margin-right: 5px !important;
+  border-radius: 20px;
 }
 
 @media screen and (min-width: 750px) and (max-width: 850px) {
   #product-grid > li > div > div > div.card__content > div > div > div > div.product-card__swatch-indicator > span {
-    width:13px!important;
-    height: 13px!important;
-    margin-right: 5px!important;
+    width: 13px !important;
+    height: 13px !important;
+    margin-right: 5px !important;
     border-radius: 20px;
+  }
 }
 
 @media screen and (min-width: 851px) and (max-width: 1000px) {
   #product-grid > li > div > div > div.card__content > div > div > div > div.product-card__swatch-indicator > span {
-    width:19px!important;
-    height: 19px!important;
-    margin-right: 5px!important;
+    width: 19px !important;
+    height: 19px !important;
+    margin-right: 5px !important;
     border-radius: 20px;
+  }
 }
 
 #FacetsWrapperMobile > div.mobile-facet.mobile-facet-filter\.v\.t\.shopify\.color-pattern > ul > li > div > label.swatch-input__label > span {
-  width: 25px!important;
-  height: 25px!important;
+  width: 25px !important;
+  height: 25px !important;
 }
-
-#FacetsWrapperMobile > div.mobile-facet.mobile-facet-filter\.v\.t\.shopify\.color-pattern > ul > li
 
 #product-grid > li > div > div > div.card__content > div > div > div > div.product-card__swatch-indicator > span.swatch.active {
   border: 2px solid white;
   box-shadow: 0 0 0 1px #000;
-  
 }
